# leechbar

./: Cargo.toml  README.md  clippy.toml  poc.rs
examples/: image.rs  simple.rs  time.rs  volume.rs
src/: alignment.rs  background.rs  bar.rs  bar_component.rs  builder.rs  color.rs  component.rs  error.rs  event.rs  foreground.rs  geometry.rs  img.rs  lib.rs  macros.rs  picture.rs  render.rs  text.rs  timeout.rs  util.rs  width.rs
src/component/: alignment.rs  background.rs  bar_component.rs  foreground.rs  img.rs  mod.rs  picture.rs  text.rs  width.rs
src/util/: color.rs  geometry.rs  mod.rs
