[package]
name = "leechbar"
version = "0.5.3"
authors = ["Christian Dürr <contact@christianduerr.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["xorg", "x11", "panel", "bar", "dock"]
categories = ["gui"]
description = "A library for building your own bar on top of XCB"
repository = "https://github.com/chrisduerr/leechbar"
documentation = "https://docs.rs/leechbar"
exclude = [
    "examples/*",
]

[dependencies]
xcb = { version = "0.8.1", features = ["randr", "thread"] }
cairo-sys-rs = { version = "0.4.0", features = ["xcb"] }
cairo-rs = { version = "0.2.0", features = ["xcb"] }
error-chain = "0.11.0"
pangocairo = "0.2.0"
image = "0.16.0"
pango = "0.2.0"
chan = "0.1.19"
log = "0.3.8"

[dev-dependencies]
libpulse-sys = "0.0.0"
lazy_static = "0.2.9"
env_logger = "0.4.3"
libc = "0.2.33"
time = "0.1.38"
