[package]
name = "leechbar"
version = "0.5.4"
authors = ["Christian Dürr <contact@christianduerr.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["xorg", "x11", "panel", "bar", "dock"]
categories = ["gui"]
description = "A library for building your own bar on top of XCB"
repository = "https://github.com/chrisduerr/leechbar"
documentation = "https://docs.rs/leechbar"
exclude = [
    "examples/*",
]

[dependencies]
xcb = { version = "0.8.1", features = ["randr", "thread"] }
cairo-sys-rs = { version = "0.5.0", features = ["xcb"] }
cairo-rs = { version = "0.3.0", features = ["xcb"] }
clippy = { version = "*", optional = true }
error-chain = "0.11.0"
pangocairo = "0.4.1"
image = "0.18.0"
pango = "0.3.0"
chan = "0.1.21"
log = "0.4.1"

[dev-dependencies]
libpulse-sys = "1.0.2"
lazy_static = "1.0.0"
env_logger = "0.5.3"
libc = "0.2.36"
time = "0.1.39"
